--- a/articles/dataset/styles.css
+++ b/articles/dataset/styles.css
@@ -22,6 +22,7 @@ h1 {
     /*color:#D9730D;
     text-align: center;*/
     font-size: 30px;
+
 }
 h2 {
     color:#337EA9;
@@ -33,4 +34,24 @@ h3 {
 a {
     text-decoration: none;
     color:#337EA9;
+}
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 20px;
+}
+
+table, th, td {
+    border: 1px solid #ddd;
+}
+
+th, td {
+    padding: 12px;
+    text-align: left;
+}
+
+th {
+    background-color: #333;
+    color: white;
 }
