--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body {
     margin-top: 50px;
     padding: 0;
     background-color: #f4f4f4;
-    color: #333;
+    color: black;
 }
 
 #presentation{
@@ -40,7 +40,7 @@ h2 {
     object-fit: cover;
     width: 250px;
     height: 200px;
-    margin-top: 15px;
+    margin-top: 75px;
 }
 
 .texte {
@@ -96,7 +96,6 @@ footer {
     padding: 20px;
     background-color: #333;
     color: white;
-    position: fixed;
     width: 100%;
     bottom: 0;
 }
