--- a/articles/vae/styles.css
+++ b/articles/vae/styles.css
@@ -9,6 +9,9 @@ img {
     display: block;
     margin-left: auto;
     margin-right: auto;
+    width: 80%;
+    height: auto;
+    object-fit: contain;
 }
 
 
