--- a/articles/vae/styles.css
+++ b/articles/vae/styles.css
@@ -7,10 +7,8 @@ body{
 
 img {
     display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 80%;
-    height: auto;
+    max-width: 100%; /* Ensures the image doesn’t exceed the width of its container */
+    height: auto;    /* Maintains the aspect ratio */
     object-fit: contain;
 }
 
