--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -32,11 +32,11 @@
             </thead>
             <tbody>
                 <tr>
-                    <td><a href="http://localhost:1313/posts/vae_blog_en/">Understand image generation with VAE</a></td>
+                    <td><a href="https://alexandremyara.github.io/posts/vae_blog_en/">Understand image generation with VAE</a></td>
                     <td>Oct 2024</td>
                 </tr>
                 <tr>
-                    <td><a href="http://localhost:1313/posts/dataset_blog_en/">How to construct multimodal datasets effeciently ?</a></td>
+                    <td><a href="https://alexandremyara.github.io/posts/dataset_blog_en/">How to construct multimodal datasets effeciently ?</a></td>
                     <td>Aug 2024</td>
                 </tr>
             </tbody>
