--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,3 +1,3 @@
 <header>
-<a href="http://localhost:1313"> back to home</a>
+<a href="https://alexandremyara.github.io/"> back to home</a>
 </header>
