--- a/static/css/posts.css
+++ b/static/css/posts.css
@@ -91,3 +91,28 @@ th {
         font-size: 0.9em;       /* Ajuste la taille du texte */
     }
 }
+
+.figure {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 1em auto; /* centre la figure sur la page */
+    max-width: 100%; /* s'assure que la figure ne dépasse pas la largeur de la page */
+  }
+  
+  .figure img {
+    max-width: 100%; /* image responsive */
+    height: auto;
+    border-radius: 4px;
+  }
+  
+  .figure-caption {
+    font-size: 13px;
+    color: #555;
+    margin-top: 0.5em;
+    font-style: italic;
+    text-align: center;
+    margin-bottom: 1.5em; /* ajoute un espace après la légende */
+  }
+  
+  
