--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -33,7 +33,7 @@
             </thead>
             <tbody>
                 <tr>
-                    <td><a href="https://alexandremyara.github.io/posts/gen_transport/">Generative Modeling through transport theory</a></td>
+                    <td><a href="/posts/gen_transport/">Generative Modeling through transport theory</a></td>
                     <td>Mar 2026</td>
                 </tr>
                 <tr>
